--- a/index.html
+++ b/index.html
@@ -7,13 +7,24 @@
     <title>Foodie website</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-white position-fixed w-100">
+    <nav
+      class="navbar navbar-expand-lg bg-white position-fixed w-100"
+      style="z-index: 1002; opacity: 99%"
+    >
       <div class="container">
         <a class="navbar-brand logo-container" href="#">
-          <img src="./public/img/icon.png" alt="logo" height="40" class="logo">
-          <span class=" fw-bold">Foodie</span>
+          <img src="./img/icon.png" alt="logo" height="40" class="logo" />
+          <span class="fw-bold">Foodie</span>
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -39,25 +50,50 @@
     </nav>
     <section class="container">
       <div class="row justify-content-between align-items-center min-vh-100">
-        <div class=" col col-lg-5 top_down">
-          <h1 class=" display-4 fw-bold text-primary mb-2">Tasty Food...</h1>
-          <p class=" text-black-50 small">
-            Lorem ipsum dolor sit amet consectetur repellat maxime exercitationem, sed, rerum eum expedita distinctio cupiditate error quod cumque praesentium aperiam fugiat libero accusamus?
+        <div class="col col-lg-5 top_down">
+          <h1 class="display-4 fw-bold text-primary mb-2">Tasty Food...</h1>
+          <p class="text-black-50 small">
+            Lorem ipsum dolor sit amet consectetur repellat maxime
+            exercitationem, sed, rerum eum expedita distinctio cupiditate error
+            quod cumque praesentium aperiam fugiat libero accusamus?
           </p>
-          <h5 class=" fw-bold">Join the best food of week</h4>
-          <div class=" mt-4">
+          <h5 class="fw-bold">Join the best food of week</h5>
+          <div class="mt-4">
             <a href="#" class="btn btn-primary me-2">
-              <i class="bi bi-cart-plus"></i>        
+              <i class="bi bi-cart-plus"></i>
             </a>
             <a href="#" class="btn btn-outline-primary">
               <i class="bi bi-list-nested"></i> View Menu
             </a>
           </div>
         </div>
-        <div class=" col col-lg-6"> 
-          <div class=" text-end top_down">
-          <img src="./public/img/home.png" alt="Plate of Salad" class="img">
-
+        <div class="col col-lg-6">
+          <div class="text-end top_down">
+            <img src="./img/home.png" alt="Plate of Salad" height="450" />
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="container min-vh-100">
+      <div class="row align-items-center">
+        <div class="col-12 col-lg-6">
+          <div class="top_down">
+            <img src="./img/about.jpg" alt="Photo of receipe" height="450" />
+          </div>
+        </div>
+        <div class="col-12 col-lg-6">
+          <div class="p-4 top_down">
+            <p class="small text-primary fw-bold">About Us</p>
+            <h1 class="display-4 fw-bold text-primary mb-2">
+              We cook the best tasty food
+            </h1>
+            <p class="text-black-50 small">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
+              eveniet facere tempore aut quisquam in corporis minus magni
+              molestiae vel veritatis autem ab, sit quia est! Voluptatibus
+              adipisci facere voluptatum!
+            </p>
+            <button class="btn btn-primary">Submit</button>
           </div>
         </div>
       </div>
