add contact page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
               <a class="nav-link" href="#menu">Menu</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contact">Conact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -88,8 +88,8 @@
           </div>
           <div class="col-12 col-lg-6">
             <div class="to-left ps-4">
-              <p class="small text-primary fw-light mb-1">About Us</p>
-              <h1 class="display-5 fw-bold text-primary mb-4">
+              <p class="small text-primary fw-bold mb-1">About Us</p>
+              <h1 class="display-5 fw-bold text-primary mb-2">
                 We cook the best tasty food
               </h1>
               <p class="text-black-50 small mb-4">
@@ -105,12 +105,12 @@
       </div>
     </section>
     <section class="bg-light" id="services">
-      <div class="container py-5">
+      <div class="container" style="padding-top: 400px">
         <div class="text-center top_down">
           <p class="small text-primary fw-bold mb-2">Services</p>
           <h5 class="fw-bold">Our Amazing Services</h5>
         </div>
-        <div class="my-5 py-5"></div>
+        <div class="my-3 py-5"></div>
         <div class="row justify-content-center">
           <div class="col-3 top_down">
             <div class="text-center">
@@ -167,83 +167,108 @@
             </div>
           </div>
         </div>
+        <div class="spacer" style="height: 300px"></div>
       </div>
-      <div class="py-5 my-5"></div>
+      <!-- <div class="py-5 my-5"></div>
+      <div class="py-5 my-5"></div> -->
     </section>
-    <section class="container" id="menu">
+    <section class="container mb-5" id="menu">
       <div class="py-5 my-5"></div>
       <div class="text-center mt-5 top_down">
         <p class="small text-primary fw-bold mb-2">Special</p>
         <h5 class="fw-bold">Menu of the Week</h5>
       </div>
       <div class="py-5 my-5"></div>
-      <div class="row justify-content-center">
-        <div class="col-3 top_down">
-          <div class="card_border p-3">
-            <div class="text-center mb-5">
-              <img
-                src="./img/plate1.png"
-                alt="berbecue salad"
-                class="w-75 card_img"
-              />
-            </div>
-            <div>
-              <h5 class="fw-bold">Barbecue Salad</h5>
-              <p class="text-primary small">Special Delious Dish</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="fw-bold mb-0">$22.2</p>
-              <a href="#" class="btn btn-primary">
-                <i class="bi bi-cart-plus"></i>
-              </a>
-            </div>
+      <div class="row justify-content-center" id="menu_row"></div>
+      <div class="py-5 my-5"></div>
+
+      <div class="row justify-content-center align-items-center">
+        <div class="col-5">
+          <div class="text-center to-right">
+            <img src="./img/movil-app.png" alt="moblie app" height="500" />
           </div>
         </div>
-        <div class="col-3 top_down">
-          <div class="card_border p-3">
-            <div class="text-center mb-5">
+        <div class="col-4">
+          <div class="to-left ps-4">
+            <p class="small text-primary fw-bold mb-2">Application</p>
+            <h4 class="fw-bold">App is now available</h4>
+            <p class="text-black-50 small mb-4">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
+              eveniet facere tempore aut quisquam in corporis minus magni
+              molestiae vel veritatis autem ab, sit quia est! Voluptatibus
+              adipisci facere voluptatum!
+            </p>
+            <div class="d-flex">
               <img
-                src="./img/plate2.png"
-                alt="berbecue salad"
-                class="w-75 card_img"
+                src="./img/app1.png"
+                alt="to apple store"
+                class="me-3"
+                height="40"
               />
-            </div>
-            <div>
-              <h5 class="fw-bold">Salad with Fish</h5>
-              <p class="text-primary small">Special Delious Dish</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="fw-bold mb-0">$30.8</p>
-              <a href="#" class="btn btn-primary">
-                <i class="bi bi-cart-plus"></i>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-3 top_down">
-          <div class="card_border p-3">
-            <div class="text-center mb-5">
-              <img
-                src="./img/plate3.png"
-                alt="berbecue salad"
-                class="w-75 card_img"
-              />
-            </div>
-            <div>
-              <h5 class="fw-bold">Spanish Salad</h5>
-              <p class="text-primary small">Special Delious Dish</p>
-            </div>
-            <div class="d-flex justify-content-between align-items-center">
-              <p class="fw-bold mb-0">$21</p>
-              <a href="#" class="btn btn-primary">
-                <i class="bi bi-cart-plus"></i>
-              </a>
+              <img src="./img/app2.png" alt="to app store" height="40" />
             </div>
           </div>
         </div>
       </div>
-      <div class="py-5 my-5"></div>
     </section>
+    <footer class="bg-light" id="contact">
+      <div class="container">
+        <div class="row justify-content-center align-items-end py-5">
+          <div class="col-6">
+            <div>
+              <p class="small text-primary fw-bold mb-2">Let's Talk</p>
+              <h4 class="fw-bold">Contact Us</h4>
+              <p class="text-black-50 small mb-0">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
+                eveniet facere tempore aut quisquam in corporis minus magni
+                molestiae vel veritatis autem ab, sit quia est! Voluptatibus
+                adipisci facere voluptatum!
+              </p>
+            </div>
+          </div>
+          <div class="col-4 text-center">
+            <button class="btn btn-primary">Contact Us Now</button>
+          </div>
+        </div>
+        <hr />
+        <div class="row justify-content-evenly py-5">
+          <div class="col-2">
+            <h4 class="fw-bold">Tasty Food</h4>
+            <p class="text-black-50 small mb-0">Social Links</p>
+          </div>
+          <div class="col-2">
+            <div class="">
+              <p class="fw-bolder">Services</p>
+              <ul class="m-0 p-0">
+                <li class="list-unstyled">Delivery</li>
+                <li class="list-unstyled">Pricing</li>
+                <li class="list-unstyled">Fast Food</li>
+                <li class="list-unstyled">Reserve your spot</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-2">
+            <div class="">
+              <p class="fw-bolder">Pages</p>
+              <ul class="m-0 p-0">
+                <li class="list-unstyled">Event</li>
+                <li class="list-unstyled">Contact Us</li>
+                <li class="list-unstyled">Privacy Policy</li>
+                <li class="list-unstyled">Terms of services</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-2">
+            <div>
+              <p class="fw-bold">Information</p>
+              <p>
+                No.271, ThamineMyothit (7)street, Mayangone Township, Yangon
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
